@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.6.15) unstable; urgency=low
   * handler: added AJP handler
   * ajp-request: unref pool only on tcp_stock failure
   * ajp-client: prevent parser recursion
+  * ajp-client: free request body when response is closed
 
  --
 
